# boris-robot

./: .gitignore  .gitmodules  README.md  boris-robot.rosinstall  external_eye_calibration.npy  external_eye_calibration_right.npy  set_env.bash
boris_tools/: CMakeLists.txt  package.xml  setup.py
boris_tools/calib/: left_depth_PS1080_PrimeSense.yaml
boris_tools/calib_data/: external_depth_PS1080_PrimeSense.yaml  external_eye_calibration.npy  external_rgb_PS1080_PrimeSense.yaml  hand_eye_calib_data_left.npy  hand_eye_calib_data_right.npy  left_rgb_PS1080_PrimeSense.yaml  right_depth_PS1080_PrimeSense.yaml  right_rgb_PS1080_PrimeSense.yaml
boris_tools/cfg/: BorisPositionFFJointTrajectoryActionServer.cfg
boris_tools/launch/: pointgrey_camera.launch  run_bag_video_extractor.launch  run_external_depth_camera.launch  run_external_eye_calibrator.launch  run_hand_eye_calibrator.launch  run_left_depth_camera.launch  run_left_ft_sensor.launch  run_marker_odometry.launch  run_right_depth_camera.launch
boris_tools/models/: blue_box.urdf  blue_sphere.urdf  green_box.urdf  green_cylinder.urdf  object.urdf  red_box.urdf  red_cylinder.urdf
boris_tools/scripts/: TransformPairsInputTest01.yml  boris_executer.py  boris_robot.py  calibrate_intrinsics.bash  calibrate_intrinsics_external.bash  calibrate_intrinsics_left.bash  calibrate_intrinsics_right.bash  cartesian_impedance_keyjoy.py  cartesian_trajectory_player.py  external_eye_calibrator.py  ft_sensor_node.py  generate_video.bash  getch.py  hand2eye_test.py  hand_eye_calibrator.py  joint_impedance_keyjoy.py  joint_state_player.py  joint_state_recorder.py  joint_trajectory_action_server.py  joint_trajectory_player.py  joint_trajectory_recorder.py  mock_imu_node.py  model_spawner_old.py  moveit_calibration_poses.py  moveit_goto_pose_example.py  object_scan_wpts.npy  quaternion_rotation.py  run_data_glove.bash  scan_waypoints.npy  scan_waypoints2.npy  simple_trajectory.py  test_cartesian_trajectory_player.py  test_gravity_compensation.py  test_joint_impedance_player.py  test_joint_trajectory_player.py  test_minjerk_player.py  test_moveit_planning.py  touch_hand_ctrl.py  trajectory_action_client.py  yml2npy.py
boris_tools/scripts/contact_trajectories/: box_traj.csv  cylinder_slide_trajectory.csv  cylinder_traj.csv  ibkinor_trajectory.csv  ibuprofen_trajectory.csv  saucepan_trajectory.csv  saucepan_trajectory02.csv  saucepan_trajectory03.csv  saucepan_trajectory04.csv  spatula_trajectory.csv  suitcase_trajectory01.csv  test_traj.csv
boris_tools/scripts/default_calib_waypoints/: calib_wpts_left.npy  calib_wpts_right.npy
boris_tools/src/boris_tools/: boris_kinematics.py  (+11 more)
(+88 files in other folders)
